# 1.1.0

## Enhancements

### General

 * Fixed some typos and ommissions in the v0.5.0.1 and v0.5.0.0 sections of the release notes.
 
### Certificates

 * Added `IssuedTo` and `IssuedBy` properties to [X509Certificate2](http://msdn.microsoft.com/en-us/library/ms148409(v=vs.90).aspx) objects.  The values match what the Certificates MMC snap-in displays.
 * Added `DisplayName` property to [X509Store](http://msdn.microsoft.com/en-us/library/d228271e(v=vs.90).aspx) objects, to show the names of the stores as they are displayed in the Certificates MMC snap-in.
 
### Computer

 * Created [Resolve-NetPath](http://get-carbon.org/help/Resolve-NetPath.html) for getting the path to the Windows `net.exe` command/application.  Updated all functions that call `net.exe` to use this function to resolve its path.  Thanks to Paul Aage Aasheim for discovering that when running login scripts, `net.exe` isn't in the path.

### IIS

 * Created [Get-IisHttpHeader](http://get-carbon.org/help/Get-IisHttpHeader.html) for getting the custom HTTP headers for a website or one of its sub-directories.
 * Created [Set-IisHttpHeader](http://get-carbon.org/help/Set-IisHttpHeader.html) for creating/setting a custom HTTP header for a website or one of its sub-directories.
 * Created [Get-IisMimeMap](http://get-carbon.org/help/Get-IisMimeMap.html) for getting the file extension to MIME type mappings for the IIS web server.
 * Created [Remove-IisMimeMap](http://get-carbon.org/help/Remove-IisMimeMap.html) for removing a file extension to MIME type mapping for the IIS web server.
 * Created [Set-IisMimeMap](http://get-carbon.org/help/Set-IisMimeMap.html) for creating/setting a file extension to MIME type mapping for the IIS web server.

## Bug Fixes

### Computer
